--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,27 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+
+.logo-title{
+    padding-left: 4px;
+    vertical-align: middle;
+}
+
+.form-input-icon{
+    padding-top: 10px;
+}
+
+.navbar-search{
+    margin-left: 5rem;
+}
+
+.login-status{
+    margin-left: auto;
+
+}
+
+.user-name{
+    font-weight: bold;
+}
+
+.loginMenuButton{
+    border-radius: 8px;
+    border: 1px solid #dadce0;
+}
