User signup process complete

--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -3,6 +3,15 @@
     <img src="https://www.gstatic.com/images/branding/product/1x/keep_48dp.png" class="d-inline-block align-top" width="40" alt="">
     <span class="logo-title"> Keep</span>
   </a>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <%= link_to("Sign up",new_user_registration_path,class:"nav-link")%>
+      <%# <a class="nav-link" href="#">Signup <span class="sr-only">(current)</span></a> %>
+    </li>
+    <li class="nav-item">
+      <%= link_to("Sign in",new_user_session_path,class:"nav-link")%>
+    </li>
+  </ul>
   <form class="form-inline navbar-search">
     <div class="input-group">
       <div class="input-group-prepend">
