--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,11 @@
     border: 1px solid #dadce0;
 }
 
+.login-form{
+  margin-top: 20px;
+  box-shadow: 1px 1px 2px grey;
+}
+
 
 
 /* ------------------------------------------------- */
