--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,9 @@
-<div class="container">
+
   <h2>Sign up</h2>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <span>Already Registered?</span>
+  <%= link_to 'Log In', new_user_session_path,class: "btn btn-info authentication-links" %>
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name),html: { class: "login-form"}) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="field">
       <%= f.label :username %><br />
@@ -25,6 +28,8 @@
     <div class="actions">
       <%= f.submit "Sign up" %>
     </div>
+
   <% end %>
 
-</div>
+
+
