--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -1,17 +1,10 @@
+<% if user_signed_in? %>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img src="https://www.gstatic.com/images/branding/product/1x/keep_48dp.png" class="d-inline-block align-top" width="40" alt="">
     <span class="logo-title"> Keep</span>
   </a>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
-      <%= link_to("Sign up",new_user_registration_path,class:"nav-link")%>
-      <%# <a class="nav-link" href="#">Signup <span class="sr-only">(current)</span></a> %>
-    </li>
-    <li class="nav-item">
-      <%= link_to("Sign in",new_user_session_path,class:"nav-link")%>
-    </li>
-  </ul>
+  
   <form class="form-inline navbar-search">
     <div class="input-group">
       <div class="input-group-prepend">
@@ -22,10 +15,13 @@
   </form>
   <div class="login-status dropdown">
     <button class="btn dropdown-toggle loginMenuButton" type="button" id="loginMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-      Hello <span class="user-name">Saadat</span>
+      Hello <span class="user-name"><%= current_user.username %></span>
     </button>
     <div class="dropdown-menu" aria-labelledby="loginMenuButton">
-      <a class="dropdown-item" href="#">Logout</a>
+      <%= link_to 'Logout', destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+      
     </div>
   </div>
 </nav>
+
+<% end %>
