--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,8 @@
   </head>
   <body>
     <%= render 'layouts/topbar' %>
-    <%= yield %>
-    
+    <div class="container">
+      <%= yield %>
+    </div>  
   </body>
 </html>
