--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
-<%= render 'layouts/topbar' %>
+<% if user_signed_in? %>
+  <%= render 'layouts/topbar' %>
+<% end %>
 <div class="container">
   <%= yield %>
 </div>
