--- a/app/views/notes/edit.js.erb
+++ b/app/views/notes/edit.js.erb
@@ -1,2 +1,2 @@
-$(".note-form").html("<%= j render('form',note: @note) %>");
+$(".note-form-modal-div").html("<%= j render('form', note: @note) %>");
 $("#noteModal").modal();
