--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -51,3 +51,11 @@
         </div>
   </div>
 </div>
+
+<script>
+  $(()=>{
+      $('.note-form').on('submit',function () {
+          $("#noteModal").modal('hide');
+      })
+  })
+</script>
