--- a/app/views/shares/_share.html.erb
+++ b/app/views/shares/_share.html.erb
@@ -1,5 +1,10 @@
-<%# TODO: We should pass Share object instead of passing it's attributes %>
-<%# TODO: Show user email also. %>
 <li class="list-group-item">
-  <%= user.username %> <%= link_to "Remove", delete_shared_note_note_shares_path(note, user_id: user.id), class: "share-remove-link", method: :delete, data: { confirm: "Are you sure you want to delete?" } %>
+  <div class="row">
+    <strong class="col-3">Username:</strong><%= share.user.username %><br>
+  </div>
+  <div class="row">
+    <strong class="col-3">Email:</strong><%= share.user.email %><br>
+  </div>
+
+  <%= link_to "Remove", [share.note, share], class: "share-remove-link", method: :delete, data: { confirm: "Are you sure you want to delete?" } %>
 </li>
