--- a/app/views/layouts/_topbar.html.erb
+++ b/app/views/layouts/_topbar.html.erb
@@ -16,7 +16,7 @@
   <div class="collapse navbar-collapse" >
     <ul class="navbar-nav mr-auto pl-3">
       <li class="nav-item">
-        <%= link_to 'Shared With Me', shared_with_me_notes_path, class: 'nav-link' %>
+        <%= link_to 'Shared With Me', shared_notes_path, class: 'nav-link' %>
       </li>
     </ul>
   </div>
