--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -8,22 +8,10 @@
         </button>
       </div>
       <div class="modal-body">
+        <% if @note.errors.any? %>
+          <%= render 'errors',object:@note %>
+        <% end %>
         <%= form_with model: @note, class: 'note-form' do |form| %>
-
-          <% if @note.errors.any? %>
-            <div id="error_explanation">
-              <h2>
-                <%= pluralize(@note.errors.count, "error") %> prohibited
-                this note from being saved:
-              </h2>
-              <ul>
-                <% @note.errors.full_messages.each do |msg| %>
-                  <li><%= msg %></li>
-                <% end %>
-              </ul>
-            </div>
-          <% end %>
-
           <div class="form-group">
             <%= form.label :title %>
             <%= form.text_field :title, class: "form-control", required: true, minlength: 3 %>
