--- a/app/views/notes/update.js.erb
+++ b/app/views/notes/update.js.erb
@@ -1,2 +1,2 @@
 $(`.notes-main-container>.card-columns .note-pin[data-id="${<%= @note.id%>}"]`)
-    .parent().html("<%= j render @note %>");
+    .parents('.card').html("<%= j render @note %>");
