--- a/app/views/notes/_note.html.erb
+++ b/app/views/notes/_note.html.erb
@@ -1,19 +1,17 @@
+<% if Rails.application.routes.recognize_path(request.referrer)[:action] != "shared" %>
+  <i class="note-pin <%= note.is_pinned ? "fas fa-thumbtack" : "fas fa-map-pin" %>" data-pinned=<%= note.is_pinned %>></i>
+<% end %>
+<div class="card-body">
+  <h5 class="card-title">Title: <%= note.title %></h5>
+  <p class="card-text">Description: <%= note.description %></p>
 
-  <i class="note-pin <%= note.is_pinned ? "fas fa-map-pin" : "fas fa-thumbtack" %>" data-id="<%= note.id %>" data-pinned=<%= note.is_pinned %>></i>
-  <div class="card-body">
-    <h5 class="card-title">Title: <%= note.title %></h5>
-    <p class="card-text">Description: <%= note.description %></p>
-
-    <% if note.images.attached? %>
-      <% note.images.each do |image| %>
-        <div class="">
-          <img src="<%= url_for(image) %>>" class="card-img attachment-img">
-        </div>
-      <% end %>
-    <% end %>
-
-    <%= link_to "Show", note_path(note), class: "navigation-links" %>
-    <%= link_to "Edit", notes_path,remote:true, class: "navigation-links" %>
-    <%= link_to "Delete", note_path(note), method: :delete, data: { confirm: "Are you sure you want to delete?" } %>
-  </div>
+  <% if note.images.attached? %>
+    <%= render 'images', note: note %>
+  <% end %>
+  <% if Rails.application.routes.recognize_path(request.referrer)[:action] != "shared" %>
+    <%= render 'note_links', note: note %>
+  <% else %>
+    <%= render 'shared_note_links', note: note %>
+  <% end %>
+</div>
 </div>
