--- a/app/views/notes/shared.html.erb
+++ b/app/views/notes/shared.html.erb
@@ -4,19 +4,15 @@
   <% else %>
     <div class="card-columns mt-5">
       <% @notes.each do |note| %>
-        <div class="card" style="background-color: <%= note.background_color %>">
+        <div class="card" style="background-color: <%= note.background_color %>" data-id="<%= note.id %>">
+
           <div class="card-body">
             <h5 class="card-title">Title: <%= note.title %></h5>
             <p class="card-text">Description: <%= note.description %></p>
             <% if note.images.attached? %>
-              <% note.images.each do |image| %>
-                <div class="">
-                  <img src="<%= url_for(image) %>>" class="card-img attachment-img">
-                </div>
-              <% end %>
+              <%= render 'images', note: note %>
             <% end %>
-            <% share = note.shares.find_by(user_id:current_user.id) %>
-            <%= link_to "Remove", note_share_path(share.note,share), method: :delete, data: { confirm: "Are you sure you want to delete?" } %>
+           <%= render 'shared_note_links', note: note %>
           </div>
         </div>
       <% end %>
