--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -19,7 +19,8 @@
 
           <div class="form-group">
             <%= form.label :description %>
-            <%= form.text_area :description, class: "form-control", rows: 4, required: true, minlength: 3 %>
+            <%#= form.rich_text_area :description %>
+            <%= form.rich_text_area :description, class: "form-control", rows: 4, required: true, minlength: 3 %>
           </div>
 
           <div class="form-group">
